// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  id="security_hotspots"
>
  <Connect(withCurrentUser(FilterBar))
    filters={
      Object {
        "assignedToMe": false,
        "newCode": false,
        "status": "TO_REVIEW",
      }
    }
    isStaticListOfHotspots={true}
    onBranch={false}
    onChangeFilters={[MockFunction]}
    onShowAllHotspots={[MockFunction]}
  />
  <ScreenPositionHelper>
    <Component />
  </ScreenPositionHelper>
</div>
`;

exports[`should render correctly 2`] = `
<div>
  <div
    className="wrapper"
    style={
      Object {
        "top": 0,
      }
    }
  >
    <Suggestions
      suggestions="security_hotspots"
    />
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
      title="hotspots.page"
    />
    <A11ySkipTarget
      anchor="security_hotspots_main"
    />
    <DeferredSpinner
      className="huge-spacer-left big-spacer-top"
      loading={false}
      timeout={100}
    >
      <div
        className="display-flex-column display-flex-center"
      >
        <img
          alt="hotspots.page"
          className="huge-spacer-top"
          height={166}
          src="/images/hotspot-large.svg"
        />
        <h1
          className="huge-spacer-top"
        >
          hotspots.no_hotspots.title
        </h1>
        <div
          className="abs-width-400 text-center big-spacer-top"
        >
          hotspots.no_hotspots.description
        </div>
        <Link
          className="big-spacer-top"
          onlyActiveOnIndex={false}
          style={Object {}}
          target="_blank"
          to={
            Object {
              "pathname": "/documentation/user-guide/security-hotspots/",
            }
          }
        >
          hotspots.learn_more
        </Link>
      </div>
    </DeferredSpinner>
  </div>
</div>
`;

exports[`should render correctly with hotspots 1`] = `
<div>
  <div
    className="wrapper"
    style={
      Object {
        "top": 0,
      }
    }
  >
    <Suggestions
      suggestions="security_hotspots"
    />
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
      title="hotspots.page"
    />
    <A11ySkipTarget
      anchor="security_hotspots_main"
    />
    <DeferredSpinner
      className="huge-spacer-left big-spacer-top"
      loading={false}
      timeout={100}
    >
      <div
        className="layout-page"
      >
        <div
          className="sidebar"
        >
          <HotspotList
            hotspots={
              Array [
                Object {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h1",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "command-injection",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "HIGH",
                },
                Object {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h2",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "command-injection",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "HIGH",
                },
              ]
            }
            isStaticListOfHotspots={true}
            onHotspotClick={[MockFunction]}
            securityCategories={Object {}}
            statusFilter="TO_REVIEW"
          />
        </div>
        <div
          className="main"
        />
      </div>
    </DeferredSpinner>
  </div>
</div>
`;

exports[`should render correctly with hotspots 2`] = `
<div>
  <div
    className="wrapper"
    style={
      Object {
        "top": 0,
      }
    }
  >
    <Suggestions
      suggestions="security_hotspots"
    />
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
      title="hotspots.page"
    />
    <A11ySkipTarget
      anchor="security_hotspots_main"
    />
    <DeferredSpinner
      className="huge-spacer-left big-spacer-top"
      loading={false}
      timeout={100}
    >
      <div
        className="layout-page"
      >
        <div
          className="sidebar"
        >
          <HotspotList
            hotspots={
              Array [
                Object {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h1",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "command-injection",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "HIGH",
                },
                Object {
                  "author": "Developer 1",
                  "component": "com.github.kevinsawicki:http-request:com.github.kevinsawicki.http.HttpRequest",
                  "creationDate": "2013-05-13T17:55:39+0200",
                  "key": "h2",
                  "line": 81,
                  "message": "'3' is a magic number.",
                  "project": "com.github.kevinsawicki:http-request",
                  "resolution": undefined,
                  "rule": "checkstyle:com.puppycrawl.tools.checkstyle.checks.coding.MagicNumberCheck",
                  "securityCategory": "command-injection",
                  "status": "TO_REVIEW",
                  "updateDate": "2013-05-13T17:55:39+0200",
                  "vulnerabilityProbability": "HIGH",
                },
              ]
            }
            isStaticListOfHotspots={true}
            onHotspotClick={[MockFunction]}
            securityCategories={Object {}}
            selectedHotspotKey="h2"
            statusFilter="TO_REVIEW"
          />
        </div>
        <div
          className="main"
        >
          <HotspotViewer
            hotspotKey="h2"
            onUpdateHotspot={[MockFunction]}
            securityCategories={Object {}}
          />
        </div>
      </div>
    </DeferredSpinner>
  </div>
</div>
`;
